--- a/student_loans_with_deep_learning.ipynb
+++ b/student_loans_with_deep_learning.ipynb
@@ -1303,8 +1303,10 @@
         "\n",
         "2. Based on the data you chose to use in this recommendation system, would your model be using collaborative filtering, content-based filtering, or context-based filtering? Justify why the data you selected would be suitable for your choice of filtering method.\n",
         "\n",
-        "*I would use a combination of contenet-based filtering and collaborative filtering*\n",
-        "- I have selected mostly content based filtering utilizing objective information about the applicant. I would leverage some collaborative filtering in order to recommend loans that have worked for similar students.  \n",
+        "*I used contenet-based filtering*\n",
+        "- Most of the data I used (such as education and financial status) consists of objective information about the student. I am recommending loans that are tailored to the student’s specific attributes and needs. This approach allows for personalized recommendations based on their individual profile.\n",
+        "\n",
+        "I have selected mostly content based filtering utilizing objective information about the applicant. I would leverage some collaborative filtering in order to recommend loans that have worked for similar students.  \n",
         "\n",
         "3. Describe two real-world challenges that you would take into consideration while building a recommendation system for student loans. Explain why these challenges would be of concern for a student loan recommendation system.\n",
         "\n",
